changes to index file

--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
     </div>
 
     <!-- Portfolio Modals -->
+
+    <!-- Portfolio Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -270,21 +272,39 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Monitoring & Alerting</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                           <!-- <img src="img/portfolio/wirecard.png" class="img-responsive img-centered" alt=""> -->
+                            <p>Project Description: Monitoring Infrastructure hosted on AWS.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong>Wirecard Issuing Technologies</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>July-September 2017</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong>Infrastructure & API</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <h2>OpenStack Environment</h2>
+                            <hr class="star-primary">
+                           <!-- <img src="img/portfolio/wirecard.png" class="img-responsive img-centered" alt=""> -->
+                            <p>Development of the OpenStack environment</p>
+                            <ul class="list-inline item-details">
+                                <li>Client:
+                                    <strong>Wirecard Issuing Technologies</a>
+                                    </strong>
+                                </li>
+                                <li>Date:
+                                    <strong>July-September 2017</a>
+                                    </strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Infrastructure & API</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -295,6 +315,7 @@
             </div>
         </div>
     </div>
+    <!-- Portfolio Modal 2 -->
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
