--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <br>Deutschland</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Find Us 0.1</h3>
+                        <h3>Find Us</h3>
                         <ul class="list-inline">
                             <!--<li>
                                 <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
