--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Us</h2>
+                    <h2>Contact Us - Currently unavailable</h2>
                     <hr class="star-primary">
                 </div>
             </div>
