adding contact section

--- a/index.html
+++ b/index.html
@@ -233,10 +233,13 @@
                             </li>
                         </ul>
                     </div>
-                    <!--<div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                    </div> -->
+                    <div class="footer-col col-md-4">
+                        <h3>Contact</h3>
+                        <ul class="list-inline">
+                            <li>
+                                <a>contact@cloud-net.io</a>
+                            </li>
+                    </div>
                 </div>
             </div>
         </div>
