--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>This feature is currently unavailable.</label>
+                                This feature is currently unavailable.
                                 <label for="name">Name</label>
                                 <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
                                 <p class="help-block text-danger"></p>
