--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <a href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="">Blog</a>
+                        <!-- <a href="">Blog</a> -->
                     </li>
                 </ul>
             </div>
