Updated Customer Section

--- a/index.html
+++ b/index.html
@@ -276,28 +276,28 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Monitoring & Alerting</h2>
+                            <h2>Communications</h2>
                             <hr class="star-primary">
                            <!-- <img src="img/portfolio/wirecard.png" class="img-responsive img-centered" alt=""> -->
-                            <p>Project Description: Monitoring Infrastructure hosted on AWS.</p>
+                            <p>Application for Automated Customer Communication based on component dependencies and outage severity.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>Wirecard Issuing Technologies</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong>July-September 2017</a>
+                                    <strong>September 2016 - May 2017</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong>Infrastructure & API</a>
+                                    <strong>Automation & Operations</a>
                                     </strong>
                                 </li>
                             </ul>
-                            <h2>OpenStack Environment</h2>
+                            <h2>Monitoring & Alerting</h2>
                             <hr class="star-primary">
                            <!-- <img src="img/portfolio/wirecard.png" class="img-responsive img-centered" alt=""> -->
-                            <p>Development of the OpenStack environment</p>
+                            <p>Real-time scalable monitoring of Spring Boot applications.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>Wirecard Issuing Technologies</a>
@@ -308,7 +308,25 @@
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong>Infrastructure & API</a>
+                                    <strong>Operations</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <h2>OpenStack </h2>
+                            <hr class="star-primary">
+                           <!-- <img src="img/portfolio/wirecard.png" class="img-responsive img-centered" alt=""> -->
+                            <p>Development of a bespoke Platform as a Service (PaaS) on top of openstack.</p>
+                            <ul class="list-inline item-details">
+                                <li>Client:
+                                    <strong>Wirecard Issuing Technologies</a>
+                                    </strong>
+                                </li>
+                                <li>Date:
+                                    <strong>September - Present 2017</a>
+                                    </strong>
+                                </li>
+                                <li>Service:
+                                    <strong>IaaS & PaaS</a>
                                     </strong>
                                 </li>
                             </ul>
