Updated Customer Section

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                             <h2>OpenStack </h2>
                             <hr class="star-primary">
                            <!-- <img src="img/portfolio/wirecard.png" class="img-responsive img-centered" alt=""> -->
-                            <p>Development of a bespoke Platform as a Service (PaaS) on top of openstack.</p>
+                            <p>Development of a bespoke Platform as a Service (PaaS) on top of OpenStack.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>Wirecard Issuing Technologies</a>
